Projects reorganized and structure has changed

--- a/app/index.html
+++ b/app/index.html
@@ -135,9 +135,9 @@
     <section class="work">
       <div class="wrapper">
         <ul class="projects">
-          <li class="active">Surf and Paddle</li>
-          <li>Batch Maker</li>
-          <li>The Market Place</li>
+          <li id="surf" class="active">Surf and Paddle</li>
+          <li id="github">GitHub Profile</li>
+          <li id="market">The Market Place</li>
         </ul>
 
         <div class="imac">
@@ -297,19 +297,94 @@
         </div>
 
         <div class="project-info">
-          <div class="surf-info">
-            <p>This was the first project I completed at The Iron Yard, and my second attempt completing the project. My first attempt can be found here: <a href="//github.com/Jeff-Coons/Surf">github.com/Jeff-Coons/Surf</a>. I used Sass, Bourbon, Neat, jQuery, and Gulp to complete this project.</p>
+          <div id="surf-info">
+            <p>This was the first project I completed at The Iron Yard, and my second attempt completing the project. My first attempt can be found here: <a href="//github.com/Jeff-Coons/Surf">github.com/Jeff-Coons/Surf</a>. I used Sass, Bourbon, Neat, and Gulp to complete this project.</p>
             <ul class="links">
               <li><a href="//github.com/Jeff-Coons/surf_and_paddle_rev">View Code</a></li>
               <li><a href="//jeff-coons.github.io/surf_and_paddle_rev">Live Site</a></li>
             </ul>
           </div>
+
+          <div id="github-info" class="hidden">
+            <p>Using GitHub's api, I was tasked with recreating most of my profile page. I used Sass and Gulp to complete this project.</p>
+            <ul class="links">
+              <li><a href="//github.com/Jeff-Coons/GitHub-Profile">View Code</a></li>
+              <li><a href="////jeff-coons.github.io/GitHub-Profile/
+                ">Live Site</a></li>
+            </ul>
+          </div>
+
+          <div id="market-info" class="hidden">
+            <p>An app that matches clients and freelancers to bring a project to life.<br />
+              This the final project that I worked on, in collaboration with <a href="//github.com/allanmonzon">Allan Monzon</a>, at The Iron Yard. We used Sass, Bourbon, Neat, Bitters, Refills, jQuery, Ember.js, Ember-Data, Firebase, Emberfire, Handlebars.js, Moment.js.</p>
+            <ul class="links">
+              <li><a href="//github.com/Jeff-Coons/Final-Project">View Code</a></li>
+              <li><a href="//jeff-coons.github.io/Market-Place">Live Site</a></li>
+            </ul>
+          </div>
+
         </div>
       </div>
     </section>
 
     <footer>
+      <div class="wrapper-footer">
+        <div class="footer-logo">
+          <?xml version="1.0" encoding="utf-8"?>
+          <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+          <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1 Tiny//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11-tiny.dtd">
+          <svg version="1.1" baseProfile="tiny" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="60px" height="60px" viewBox="0 0 60 60" xml:space="preserve">
+            <g>
+              <path fill="#444B4F" d="M2.923,36.841l-2.624-2.624c1.862,13.182,12.324,23.637,25.509,25.488l-2.623-2.622
+              C13.26,54.585,5.431,46.763,2.923,36.841z"/>
+              <path fill="#444B4F" d="M53.529,11.411l-1.473,1.474c3.68,4.731,5.874,10.671,5.874,17.115c0,8.58-3.889,16.266-9.996,21.394
+              l1.468,1.467C55.882,47.354,60,39.149,60,30C60,22.985,57.579,16.525,53.529,11.411z"/>
+              <path fill="#444B4F" d="M30,57.931c-0.64,0-1.273-0.025-1.902-0.068v2.075C28.727,59.978,29.361,60,30,60
+              c6.58,0,12.67-2.131,17.622-5.737l-1.48-1.48C41.58,56.023,36.008,57.931,30,57.931z"/>
+              <g>
+                <path fill="#444B4F" d="M30,0c-0.88,0-1.75,0.041-2.611,0.115v2.079c0.86-0.081,1.73-0.125,2.611-0.125
+                c8.146,0,15.489,3.506,20.6,9.089l1.463-1.463C46.576,3.739,38.717,0,30,0z"/>
+              </g>
+              <path fill="#B1B2A8" d="M31.753,33.293l12.859,12.74l0.232-0.23L31.985,33.061l19.08-19.081c-0.016-0.021-0.032-0.042-0.048-0.063
+              c-0.017-0.021-0.033-0.042-0.049-0.063c-0.403-0.523-0.826-1.031-1.267-1.522c-0.019-0.02-0.034-0.04-0.053-0.059
+              c-0.018-0.02-0.034-0.04-0.053-0.059L30.359,31.451l-0.981-0.973l19.263-19.263c-0.019-0.018-0.038-0.037-0.057-0.055
+              c-0.018-0.019-0.037-0.037-0.056-0.055c-0.172-0.167-0.345-0.333-0.521-0.497c-0.02-0.018-0.038-0.036-0.059-0.054
+              c-0.019-0.018-0.038-0.036-0.057-0.054l-20.771,20.77l-0.079,0.079v0.111v0.111v0.072l0,0.111v0.111l0.001,0.722V32.7v0.111
+              l0,0.786v0.11v0.112l0.079,0.078l17.894,17.895c0.022-0.016,0.043-0.03,0.065-0.047c0.021-0.015,0.045-0.029,0.066-0.045
+              c0.544-0.381,1.074-0.782,1.589-1.201c0.02-0.018,0.041-0.033,0.062-0.05s0.041-0.034,0.061-0.051L30.753,34.293L31.753,33.293z
+              M30.127,31.683l-0.992,0.991l-0.977-0.976l0.988-0.988L30.127,31.683z"/>
+              <path fill="#444B4F" d="M24.616,2.594V0.492C10.635,3.036,0,15.296,0,30c0,0.502,0.014,1.001,0.039,1.497H2.11
+              C2.083,31.001,2.069,30.502,2.069,30C2.069,16.44,11.783,5.11,24.616,2.594z"/>
+              <path fill="#8B8B83" d="M27.142,52.908l-0.079-0.079l-0.077-0.078v-18.99l0.059,0.06v-0.112v-0.11l0-0.786V32.7v-0.111
+              l-0.001-0.722v-0.111l0-0.111v-0.072v-0.111V31.35l-0.057,0.058V3.712h-2.371v28.322L6.285,32.052L3.543,29.31
+              c-0.001,0.036-0.001,0.073-0.002,0.109c0,0.037,0,0.074-0.001,0.11c-0.002,0.13-0.005,0.261-0.005,0.392
+              c0,0.026-0.001,0.052-0.001,0.078c0,0.011,0.001,0.022,0.001,0.033c0,0.037,0.001,0.075,0.001,0.113l1.906,1.906l-1.83,0.002
+              c0.002,0.026,0.005,0.052,0.007,0.079c0.002,0.025,0.005,0.052,0.007,0.078c0.035,0.427,0.08,0.852,0.135,1.273
+              c0.006,0.043,0.013,0.086,0.019,0.129s0.012,0.086,0.018,0.13l22.458,22.458c0.043,0.006,0.086,0.012,0.13,0.018
+              c0.043,0.006,0.086,0.013,0.129,0.019c0.157,0.021,0.314,0.038,0.472,0.056l-0.001-1.799v-0.899l0.078,0.078l0.078,0.078
+              l2.712,2.712c0.038,0,0.075,0.003,0.113,0.003c0.011,0,0.021,0,0.033,0c0.026,0,0.052-0.001,0.079-0.001
+              c0.131-0.001,0.261-0.003,0.392-0.006c0.037,0,0.073,0,0.11-0.001c0.037-0.001,0.074-0.001,0.11-0.002L27.142,52.908z
+              M24.616,33.136v17.246L7.387,33.153L24.616,33.136z M6.544,33.153h0.111h0.111l17.849,17.849v2.095L4.675,33.155L6.544,33.153z"/>
+              <rect x="22.761" y="7.543" fill="#8B8B83" width="0.721" height="44.815"/>
+            </g>
+          </svg>
 
+        </div>
+
+        <div class="footer-links">
+          <ul>
+            <li><a href="tel:17043012765">704.301.2765</a></li>
+            <li class="seperator">|</li>
+            <li><a href="mailto:jeffcoons@live.com">Jeffcoons@live.com</a></li>
+            <li class="seperator">|</li>
+            <li><a href="//krop.com/jeffcoons">Krop.com</a></li>
+            <li class="seperator">|</li>
+            <li><a href="//github.com/jeff-coons">Github.com</a></li>
+            <li class="seperator">|</li>
+            <li><a href="//linkedin.com/in/jeffcoons14">LinkedIn</a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
 
     <!-- build:js scripts/vendor.js -->
