--- a/app/index.html
+++ b/app/index.html
@@ -300,17 +300,16 @@
           <div id="surf-info">
             <p>This was the first project I completed at The Iron Yard, and my second attempt completing the project. My first attempt can be found here: <a href="//github.com/Jeff-Coons/Surf">github.com/Jeff-Coons/Surf</a>. I used Sass, Bourbon, Neat, and Gulp to complete this project.</p>
             <ul class="links">
-              <li><a href="//github.com/Jeff-Coons/surf_and_paddle_rev">View Code</a></li>
-              <li><a href="//jeff-coons.github.io/surf_and_paddle_rev">Live Site</a></li>
+              <li><a href="//github.com/Jeff-Coons/surf_and_paddle_rev" target="_blank">View Code</a></li>
+              <li><a href="//jeff-coons.github.io/surf_and_paddle_rev" target="_blank">Live Site</a></li>
             </ul>
           </div>
 
           <div id="github-info" class="hidden">
             <p>Using GitHub's api, I was tasked with recreating most of my profile page. I used Sass and Gulp to complete this project.</p>
             <ul class="links">
-              <li><a href="//github.com/Jeff-Coons/GitHub-Profile">View Code</a></li>
-              <li><a href="////jeff-coons.github.io/GitHub-Profile/
-                ">Live Site</a></li>
+              <li><a href="//github.com/Jeff-Coons/GitHub-Profile" target="_blank">View Code</a></li>
+              <li><a href="////jeff-coons.github.io/GitHub-Profile/" target="_blank">Live Site</a></li>
             </ul>
           </div>
 
@@ -318,8 +317,8 @@
             <p>An app that matches clients and freelancers to bring a project to life.<br />
               This the final project that I worked on, in collaboration with <a href="//github.com/allanmonzon">Allan Monzon</a>, at The Iron Yard. We used Sass, Bourbon, Neat, Bitters, Refills, jQuery, Ember.js, Ember-Data, Firebase, Emberfire, Handlebars.js, Moment.js.</p>
             <ul class="links">
-              <li><a href="//github.com/Jeff-Coons/Final-Project">View Code</a></li>
-              <li><a href="//jeff-coons.github.io/Market-Place">Live Site</a></li>
+              <li><a href="//github.com/Jeff-Coons/Final-Project" target="_blank">View Code</a></li>
+              <li><a href="//jeff-coons.github.io/Market-Place" target="_blank">Live Site</a></li>
             </ul>
           </div>
 
@@ -377,11 +376,9 @@
             <li class="seperator">|</li>
             <li><a href="mailto:jeffcoons@live.com">Jeffcoons@live.com</a></li>
             <li class="seperator">|</li>
-            <li><a href="//krop.com/jeffcoons">Krop.com</a></li>
+            <li><a href="//github.com/jeff-coons" target="_blank">Github.com</a></li>
             <li class="seperator">|</li>
-            <li><a href="//github.com/jeff-coons">Github.com</a></li>
-            <li class="seperator">|</li>
-            <li><a href="//linkedin.com/in/jeffcoons14">LinkedIn</a></li>
+            <li><a href="//linkedin.com/in/jeffcoons14" target="_blank">LinkedIn</a></li>
           </ul>
         </div>
       </div>
